--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "nodemon server/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "next": "15.0.2",
